--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Fast logbook PWA",
     "short_name": "Fast logbook",
-    "version": "1.0.0",
+    "version": "202407090448JST",
     "description": "Time-stamped work notes PWA",
     "start_url": "/index.html",
     "display": "standalone",
@@ -10,8 +10,33 @@
     "id": "Fast-logbook-PWA_eeaea1ca-42b1-40d0-bbda-27093abf9df7",
     "icons": [
         {
-            "src": "img/icon_256.png",
-            "sizes": "256x256",
+            "src": "img/android-launchericon-48-48.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "img/android-launchericon-72-72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "img/android-launchericon-96-96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "img/android-launchericon-144-144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "img/android-launchericon-192-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/android-launchericon-512-512.png",
+            "sizes": "512x512",
             "type": "image/png"
         }
     ],
