:lipstick: Changed the dark theme to Bootstrap 5.3.

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "name": "Fast logbook PWA",
     "short_name": "Fast logbook",
-    "version": "24.07.27",
+    "version": "24.07.48",
     "description": "Time-stamped work notes PWA",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#fff",
-    "theme_color": "#000",
+    "theme_color": "#62BF04",
     "id": "Fast-logbook-PWA_eeaea1ca-42b1-40d0-bbda-27093abf9df7",
     "icons": [
         {
