--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Fast logbook PWA",
     "short_name": "Fast logbook",
-    "version": "24.08.6",
-    "description": "Ver:24.08.6\nTime-stamped work notes PWA",
+    "version": "24.08.7",
+    "description": "Time-stamped work notes PWA. Ver:24.08.7",
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#fff",
