--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-console": "off"
   },
   "globals": {
-    "bootstrap": "readonly"
+    "bootstrap": "readonly",
+    "$": "readonly"
   }
 }
