--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,6 @@
     "no-console": "off"
   },
   "globals": {
-    "bootstrap": "readonly",
-    "$": "readonly"
+    "bootstrap": "readonly"
   }
 }
