--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   eslint:
-    name: Run ESLint
+    name: ESLint
     runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
       - run: npm run lint
 
   security:
-    name: Security Audit
+    name: Security
     runs-on: ubuntu-slim
     steps:
       - uses: actions/checkout@v4
